[package]
name = "rora-tide-adapter"
description = "Convert Tide Request/Response between other types of Request/Response"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/rora-rs/tide-adapter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { git = "https://github.com/logankeenan/tide.git", branch = "wasm", features = ["wasm"], default-features = false }
#rora-javascript-adapter = { path = "../rora-javascript-adapter" }
rora-javascript-adapter = "0.0.2"
worker = "0.0.7"